// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kiomCorrectionTemplate > should generate correct body with multiple failures > correction-body-multiple 1`] = `
"<div style="font-family: Arial, sans-serif; color: #333;">
  <h2>Correção de Documentos Necessária</h2>
  <p>Prezados,</p>
  <p>Após conferência dos documentos do processo <strong>IMP-2026-002</strong> (imaginarium), foram identificadas as seguintes discrepâncias que necessitam correção:</p>

  <table style="border-collapse: collapse; width: 100%; margin: 20px 0;">
    <thead>
      <tr style="background-color: #e74c3c; color: white;">
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Verificação</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Valor Esperado</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Valor Encontrado</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Detalhes</th>
      </tr>
    </thead>
    <tbody>
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd;">fob-value-match</td>
      <td style="padding: 8px; border: 1px solid #ddd;">10000.00</td>
      <td style="padding: 8px; border: 1px solid #ddd;">9500.00</td>
      <td style="padding: 8px; border: 1px solid #ddd;">FOB value mismatch</td>
    </tr>
    <tr style="">
      <td style="padding: 8px; border: 1px solid #ddd;">net-weight-match</td>
      <td style="padding: 8px; border: 1px solid #ddd;">500.000</td>
      <td style="padding: 8px; border: 1px solid #ddd;">480.000</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Net weight mismatch</td>
    </tr>
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd;">exporter-name-match</td>
      <td style="padding: 8px; border: 1px solid #ddd;">-</td>
      <td style="padding: 8px; border: 1px solid #ddd;">-</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Exporter name differs between documents</td>
    </tr>
    </tbody>
  </table>

  <p>Solicitamos o envio dos documentos corrigidos com a maior brevidade possível.</p>
  <p>Qualquer dúvida, estamos à disposição.</p>

  <p>Atenciosamente,<br/>Equipe de Importação</p>
</div>"
`;

exports[`kiomCorrectionTemplate > should generate correct body with single failure > correction-body-single 1`] = `
"<div style="font-family: Arial, sans-serif; color: #333;">
  <h2>Correção de Documentos Necessária</h2>
  <p>Prezados,</p>
  <p>Após conferência dos documentos do processo <strong>IMP-2026-001</strong> (puket), foram identificadas as seguintes discrepâncias que necessitam correção:</p>

  <table style="border-collapse: collapse; width: 100%; margin: 20px 0;">
    <thead>
      <tr style="background-color: #e74c3c; color: white;">
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Verificação</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Valor Esperado</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Valor Encontrado</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Detalhes</th>
      </tr>
    </thead>
    <tbody>
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd;">fob-value-match</td>
      <td style="padding: 8px; border: 1px solid #ddd;">10000.00</td>
      <td style="padding: 8px; border: 1px solid #ddd;">9500.00</td>
      <td style="padding: 8px; border: 1px solid #ddd;">FOB value mismatch between INV and PL</td>
    </tr>
    </tbody>
  </table>

  <p>Solicitamos o envio dos documentos corrigidos com a maior brevidade possível.</p>
  <p>Qualquer dúvida, estamos à disposição.</p>

  <p>Atenciosamente,<br/>Equipe de Importação</p>
</div>"
`;

exports[`kiomCorrectionTemplate > should generate correct subject > correction-subject 1`] = `"Correção Necessária - IMP-2026-001 - puket"`;

exports[`kiomCorrectionTemplate > should handle checks without expected/actual values > correction-body-no-values 1`] = `
"<div style="font-family: Arial, sans-serif; color: #333;">
  <h2>Correção de Documentos Necessária</h2>
  <p>Prezados,</p>
  <p>Após conferência dos documentos do processo <strong>IMP-2026-003</strong> (puket), foram identificadas as seguintes discrepâncias que necessitam correção:</p>

  <table style="border-collapse: collapse; width: 100%; margin: 20px 0;">
    <thead>
      <tr style="background-color: #e74c3c; color: white;">
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Verificação</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Valor Esperado</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Valor Encontrado</th>
        <th style="padding: 8px; border: 1px solid #ddd; text-align: left;">Detalhes</th>
      </tr>
    </thead>
    <tbody>
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd;">ports-match</td>
      <td style="padding: 8px; border: 1px solid #ddd;">-</td>
      <td style="padding: 8px; border: 1px solid #ddd;">-</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Port of loading mismatch</td>
    </tr>
    </tbody>
  </table>

  <p>Solicitamos o envio dos documentos corrigidos com a maior brevidade possível.</p>
  <p>Qualquer dúvida, estamos à disposição.</p>

  <p>Atenciosamente,<br/>Equipe de Importação</p>
</div>"
`;
